<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_basic_information">

    <fragment
        android:id="@+id/nav_basic_information"
        android:name="com.example.informationcollector.ui.basic_information.BIFragment"
        android:label="@string/menu_basic_information"
        tools:layout="@layout/fragment_basic_information" />

    <fragment
        android:id="@+id/nav_app_information"
        android:name="com.example.informationcollector.ui.app_information.AIFragment"
        android:label="@string/menu_app_information"
        tools:layout="@layout/fragment_app_information" />

    <fragment
        android:id="@+id/nav_sensor_information"
        android:name="com.example.informationcollector.ui.sensor_information.SIFragment"
        android:label="@string/menu_sensor_information"
        tools:layout="@layout/fragment_sensor_information" />

    <fragment
        android:id="@+id/nav_network_information"
        android:name="com.example.informationcollector.ui.network_information.NIFragment"
        android:label="@string/menu_network_information"
        tools:layout="@layout/fragment_sensor_information" />
    <fragment
        android:id="@+id/nav_location_information"
        android:name="com.example.informationcollector.ui.locaton_information.LIFragment"
        android:label="@string/menu_location_information"
        tools:layout="@layout/fragment_location_information" />
    <fragment
        android:id="@+id/nav_camera_information"
        android:name="com.example.informationcollector.ui.camera_information.CIFragment"
        android:label="@string/menu_camera_information"
        tools:layout="@layout/fragment_camera_information" />
    <fragment
        android:id="@+id/nav_contacts_information"
        android:name="com.example.informationcollector.ui.contacts_information.CTIFragment"
        android:label="@string/menu_contacts_information"
        tools:layout="@layout/fragment_contacts_information" />
    <fragment
        android:id="@+id/nav_sms_information"
        android:name="com.example.informationcollector.ui.sms_information.smsFragment"
        android:label="@string/menu_sms_information"
        tools:layout="@layout/fragment_sms_information" />
</navigation>